--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,7 @@
 
 <body>
     <%-body%>
+    <script src="//code.tidio.co/bz166dqqfoitfqfoamp0rmc9yzfeqdsp.js" async></script>
 </body>
 
 </html>
