--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title><%=pageTitle%> | Globalforextrading</title>
+    <title>
+        <%=pageTitle%> | Globalforextrading
+    </title>
     <link rel="shortcut icon" href="/assets/img/favicon/favicon.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -26,7 +28,7 @@
 
 <body>
     <%-body%>
-    <script src="//code.tidio.co/bz166dqqfoitfqfoamp0rmc9yzfeqdsp.js" async></script>
+        <script src="//code.tidio.co/btsfd9kc9e8zjsffmjihkezve72m9lme.js" async></script>
 </body>
 
 </html>
